logs/skyb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/skyb'...
Listing './lib/python3.5/site-packages/skyb/conf'...
Compiling './lib/python3.5/site-packages/skyb/conf/conf_loader.py'...
***   File "./lib/python3.5/site-packages/skyb/conf/conf_loader.py", line 70
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/skyb/model'...
Compiling './lib/python3.5/site-packages/skyb/model/__init__.py'...
***   File "./lib/python3.5/site-packages/skyb/model/__init__.py", line 53
    print smart_sql
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/skyb/quick'...
Listing './lib/python3.5/site-packages/skyb/quick/flyway'...
Compiling './lib/python3.5/site-packages/skyb/quick/flyway/__init__.py'...
***   File "./lib/python3.5/site-packages/skyb/quick/flyway/__init__.py", line 30
    print "INFO %s" % msg
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/skyb/quick/tornado'...
Compiling './lib/python3.5/site-packages/skyb/quick/tornado/__init__.py'...
***   File "./lib/python3.5/site-packages/skyb/quick/tornado/__init__.py", line 22
    print 'application start at port %s' % port
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/skyb/test'...
Compiling './lib/python3.5/site-packages/skyb/test/test.py'...
***   File "./lib/python3.5/site-packages/skyb/test/test.py", line 17
    print cmd_conf.__dict__
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/skyb/utils'...
Listing './lib/python3.5/site-packages/skyb-0.1.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
